--- a/burger-app/package.json
+++ b/burger-app/package.json
@@ -13,7 +13,7 @@
     "prop-types": "latest"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --no-cache",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
