--- a/burger-app/package.json
+++ b/burger-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "node": "^14.11.0",
     "prop-types": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
